Fixed title and layout issue with Matt's name

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -18,6 +18,7 @@ body.home-controller ul.active-visits li.visit {
     margin: 5px;
     display: inline-block;
     position: relative;
+    overflow: hidden;
 }
 
 body.home-controller ul.active-visits li.visit .dropdown {
